# COSMOS77-ex06

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
config/: config.yaml  logging_config.json
deploy/: PERSISTENT_DEPLOY.md  horizon.md  live_tunnels.sh  tunnel.sh
docs/: ACCEPTANCE.md  PLAN.md  PRD.md  PRD_bonus.md  PRD_dec_pomdp.md  PRD_deploy.md  PRD_game.md  PRD_gui.md  PRD_mcp_servers.md  PRD_nl_protocol.md  PRD_orchestrator.md  PRD_report.md  PRD_strategy.md  TODO.md
docs/prompts/: 000_phase0_bootstrap.md  001_phase1_docs.md  002_phase2_game.md  003_phase3_servers.md  004_phase4_orchestrator.md  005_phase5_strategy.md  006_phase6_gui.md  007_phase7_runner.md  008_phase8_deploy.md  009_phase9_report.md  010_phase10_readme.md  011_phase11_bonus.md  012_phase12_qa.md
reports/: bonus_game.sample.json  internal_game.json
scripts/: bonus_run.py  check_line_cap.py  generate_cover_pdf.py  generate_results_chart.py  generate_sample_screenshots.py  train_qtable.py
src/cosmos77_ex06/: __init__.py  constants.py
src/cosmos77_ex06/agents/: __init__.py  base.py  belief.py
src/cosmos77_ex06/bonus/: __init__.py  cloud.py  coordinate.md  diff_check.py  intergroup.py  intergroup_series.py  oracle.py  prose.py  remote.py  report.py  request_server.py  run.py  schema.py  series.py
src/cosmos77_ex06/cli/: __init__.py  main.py
src/cosmos77_ex06/deploy/: __init__.py
src/cosmos77_ex06/game/: __init__.py  board.py  match.py  moves.py  rules.py  state.py
src/cosmos77_ex06/gui/: __init__.py  driver.py  render.py  theme.py  viewer.py
src/cosmos77_ex06/mcp_servers/: __init__.py  app.py  auth.py  cop_server.py  observation.py  server.py  state_factory.py  state_mirror.py  thief_server.py  tools.py
src/cosmos77_ex06/orchestrator/: __init__.py  cloud.py  engine.py  gemini_client.py  guard.py  llm_retry.py  local.py  runner.py  sync.py  tactics.py  transcript.py  turn.py  turn_log.py
src/cosmos77_ex06/report/: __init__.py  dispatch.py  gmail_sender.py  output.py  schema.py
src/cosmos77_ex06/sdk/: __init__.py  game_ops.py  sdk.py
src/cosmos77_ex06/shared/: __init__.py  config.py  gatekeeper.py  logging_setup.py  version.py
src/cosmos77_ex06/strategy/: __init__.py  heuristic.py  plots.py  pursuit.py  qtable.py
src/cosmos77_ex06/web/: __init__.py  app.py  feed.py  match.py  pages.py  routes.py  runner.py  security.py  series.py  server.py
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py  test_gatekeeper.py  test_logging_setup.py  test_sdk.py  test_version.py
tests/unit/test_bonus/: conftest.py  test_bonus_send.py  test_cloud_and_run.py  test_diff_check.py  test_intergroup.py  test_intergroup_series.py  test_oracle.py  test_prose.py  test_remote.py  test_report.py  test_series.py
tests/unit/test_deploy/: __init__.py  conftest.py  test_barrier_turn_progression.py  test_cloud_build.py  test_cloud_engine.py  test_state_sync.py  test_sync_auth_and_guards.py  test_sync_verify.py
tests/unit/test_game/: conftest.py  test_board.py  test_game_runner.py  test_match.py  test_meta_rules.py  test_moves.py  test_rules.py  test_sdk_game.py  test_state.py
tests/unit/test_gui/: conftest.py  test_render.py  test_screenshots.py  test_turn_log.py  test_viewer.py
tests/unit/test_mcp/: conftest.py  test_auth.py  test_module_and_live.py  test_no_llm.py  test_observation.py  test_servers.py  test_tools.py
tests/unit/test_orchestrator/: conftest.py  test_agents.py  test_belief.py  test_engine.py  test_engine_e3e4.py  test_gemini_client.py  test_guard.py  (+7 more)
(+22 files in other folders)
