[project]
name = "cosmos77-ex06"
version = "1.00"
description = "Orchestration of AI Agents (203.3763) HW6: two autonomous AI agents (a Cop and a Thief) play a config-driven Cops & Robbers pursuit, each backed by its own FastMCP server, coordinating in free natural language under partial observability, driven by an orchestrator (MCP Client) running Gemini — local then cloud, ending with an automated Gmail JSON report (vibe-coded with Claude Code)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Abdallah Khaldi", email = "abdallahkh12@icloud.com" },
    { name = "Tasneem Natour", email = "Natortasneem@gmail.com" },
]
keywords = [
    "mcp",
    "fastmcp",
    "multi-agent",
    "orchestration",
    "dec-pomdp",
    "gemini",
    "cops-and-robbers",
    "claude-code",
    "203.3763",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp",
    "google-genai",
    "pyyaml",
    "pydantic>=2.6",
    "rich",
    "pygame",
    "matplotlib",
    "numpy",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "python-dotenv",
    "starlette",
    "uvicorn",
    "jinja2",
    "sse-starlette",
    "websockets",
]

[project.scripts]
cosmos77-pursuit = "cosmos77_ex06.cli.main:main"
cosmos77-web = "cosmos77_ex06.web.server:main"

[project.urls]
Homepage = "https://github.com/AbdallahKhaldi/COSMOS77-ex06"
Repository = "https://github.com/AbdallahKhaldi/COSMOS77-ex06"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos77_ex06"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["assets/", "results/", "reports/", "data/", "logs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008", "N802", "N806", "SIM300"]
"scripts/**/*.py" = ["N802"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cosmos77_ex06/cli/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The graded run is the FULL suite: `uv run pytest -q -m 'not live'` (>=85% over src/).
# To run a single phase in isolation, scope coverage to that package so unrelated
# modules are not counted, e.g. Phase 3 (override addopts so the default src-wide
# --cov is replaced, not appended):
#   uv run pytest tests/unit/test_mcp/ -m 'not live' \
#     -o addopts="--strict-markers --cov-fail-under=85" \
#     --cov=cosmos77_ex06.mcp_servers --cov-report=term-missing
addopts = "-v --cov=src/cosmos77_ex06 --cov-report=term-missing --cov-report=xml --strict-markers --cov-fail-under=85"
markers = [
    "live: hits a real Gemini / MCP server / Gmail / network — excluded from CI, run manually",
    "integration: end-to-end test exercising multiple components together",
    "slow: long-running test (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "hypothesis",
    "pre-commit",
]
